# feature_extraction

./: CMakeLists.txt  README.md  main.cpp
bezier/: BezierCurve.cpp  BezierCurve.h  BezierFeatures.cpp  BezierFeatures.h  BezierPreprocessor.cpp  BezierPreprocessor.h  CMakeLists.txt  ExtractBezierFeatures.cpp  ExtractBezierFeatures.h
bezier-data/points/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  eq.txt  eq2.txt  eq3.txt  eq4.txt  eq5.txt
unit_test/: CMakeLists.txt  Test.cpp
